syntax = "proto3";

package blogrpc.common.response;

option go_package = "response";

message EmptyResponse {}